# 2022-ABPS-fNIRS-Demo

./: .gitignore  LICENSE  README.md  pyproject.toml
analysis/: 01-view-data.py  03-glm.ipynb
experiment/: experiment.py
