[tool.poetry]
name = "2022-ABPS-fNIRS-Demo"
version = "0.1.0"
description = "Demonstrate fNIRS processing with NIRSport2 device."
authors = ["Robert Luke <code@robertluke.net>"]

[tool.poetry.dependencies]
python = "3.8.13"
click = "^8.1.3"
pyxid2 = "^1.0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
